Added "Game" object and "InteractableObject" class; can now handle multiple objects

--- a/Testing/Testing/Properties/Resources.resx
+++ b/Testing/Testing/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="kanye" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\kanye.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lightbulb" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\lightbulb.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="mc" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\main.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
