--- a/Testing/Testing/Properties/Resources.resx
+++ b/Testing/Testing/Properties/Resources.resx
@@ -136,4 +136,7 @@
   <data name="pokeball" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\pokeball.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="sadpika" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\sadpika.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
